added random tests

--- a/rewrite/test.html
+++ b/rewrite/test.html
@@ -18,8 +18,11 @@
   <div><p>hello <span>fingers</span>. Welcome!</p></div>
 
 
-  <div><div><p>tello</p><p></p></div></div>
-  <div><div><p>fello</p><p></p></div></div>
+  <div><span><p>tello</p><p></p></span></div>
+  <div><span><p>fello</p><p></p></span></div>
+
+  <div><img></div> 
+  <div><i><i><img><p></p></i><span><p><p></p></p></span></i><b></b></div>
 
 
   <script>
