--- a/rewrite/test_random.html
+++ b/rewrite/test_random.html
@@ -10,7 +10,7 @@
 <script>
 
 
-const ELEMENTS = ['div','p','span','i','b','img'],
+const ELEMENTS = ['p','span','i','b','img'],
      CONTAINER_ELEMENT_SELECTOR = 'div, p, span, i, b',
      CHARACTERS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
 
