investigating undo of relocate group

--- a/rewrite/test.html
+++ b/rewrite/test.html
@@ -39,6 +39,19 @@
   <div><i><p><span>j0zF<b></b></span><i><span></span></i>LS</p>scKvb</i><b>vO8</b>G</div> 
   <div><img><span></span></div>
 
+  <div>sSp<span></span></div> 
+  <div><p><p><span><i>eq</i>okfHoePCoqFZ4<img></span><p></p>YT</p><p>bdMa</p>R</p><img>gv<img></div>
+
+
+  <div><p></p><p><span>j</span><span>Ukoy</span><b>x4KwW</b><img>hWQ</p><b><img><b></b></b>d2HPWS4</div>
+  <div><p><p></p></p><p><span>j</span><span>Ukoy</span><b>x4KwW</b><img>hWQ</p><b><img><b></b></b>d2HPWS4</div>
+
+  <div><i><img></i>iXMXSe4nqp</div>
+  <div><i><b></b><b><b></b><i><i>Lrjl1pP</i>Y0B</i>xN</b><i></i><span>gwcD4Bj</span><i>A</i>QW6awpo</i><img><p>Z</p>b<p></p>7f9</div>
+
+  <div><p></p><p><i></i></p><p></p><i><img><span><b></b></span><img></i><p></p><i><img><span></span></i><p><i></i></p><p></p><img><span><span></span></span><img></div>
+  <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i>zV87J1UU3Ex</div>
+
   <script>
 
 
