--- a/rewrite/test.html
+++ b/rewrite/test.html
@@ -52,6 +52,13 @@
   <div><p></p><p><i></i></p><p></p><i><img><span><b></b></span><img></i><p></p><i><img><span></span></i><p><i></i></p><p></p><img><span><span></span></span><img></div>
   <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i>zV87J1UU3Ex</div>
 
+<div id="t1">lol<span>ydew<i>hey</i>de</span></div>
+<div id="t2">lol<p>ydew<b>hey</b>de</p></div>
+
+
+<!--div><p><b><i><b><i>ya</i></b><i>f</i></i><span><i></i></span></b></p><p></p><p></p><p></p><span><p><i></i></p>w7U0Ah4<i></i></span><b><p><span></span><img></p></b><p></p><img><i></i><span></span></div>
+<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div-->
+
   <script>
 
 
