--- a/rewrite/test.html
+++ b/rewrite/test.html
@@ -31,9 +31,9 @@
   <div><p>hello</p></div>
 
   <div><img><p></p></div> 
-  <div><img><p></p><p></p></div> 
+  <div><img><p></p><p></p></div--> 
 
-  <div><b><p></p><b><img><p><span></span></p>XW</b><span>Jl</span><b></b></b>h5QnXX</b>
+  <!--div><b><p></p><b><img><p><span></span></p>XW</b><span>Jl</span><b></b></b>h5QnXX</b>
   <div><span><span><b><i></i></b><img><i><span></span></i></span></span><b><p></p>z</b><span><b></b><img></span>2<img></div>
 
   <div><i><p><span>j0zF<b></b></span><i><span></span></i>LS</p>scKvb</i><b>vO8</b>G</div> 
@@ -47,21 +47,23 @@
   <div><p><p></p></p><p><span>j</span><span>Ukoy</span><b>x4KwW</b><img>hWQ</p><b><img><b></b></b>d2HPWS4</div>
 
   <div><i><img></i>iXMXSe4nqp</div>
-  <div><i><b></b><b><b></b><i><i>Lrjl1pP</i>Y0B</i>xN</b><i></i><span>gwcD4Bj</span><i>A</i>QW6awpo</i><img><p>Z</p>b<p></p>7f9</div-->
+  <div><i><b></b><b><b></b><i><i>Lrjl1pP</i>Y0B</i>xN</b><i></i><span>gwcD4Bj</span><i>A</i>QW6awpo</i><img><p>Z</p>b<p></p>7f9</div>
  
 <div><p></p><p><i></i></p><p></p><i><img><span><b></b></span><img></i><p></p><i><img><span></span></i><p><i></i></p><p></p><img><span><span></span></span><img></div>
- 
 <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i>zV87J1UU3Ex</div>
+
+<div><span><b><p></p></b>pGy<p></p></span><span><span><span></span></span><i></i><i></i></span><span></span><img></div>
+<div><i></i><img><img><i><i><b></b></i><p></p></i><b></b><p></p><p></p><span></span></div>
 
 
 <div><img><i></i><b></b><i></i><font></font><p></p><p></p><span></span></div>
 <div><p></p><p></p><span></span><img><i></i><b></b><i></i><font></font></div>
 
  
-  <!--div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i></div>
-  <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i>zV87J1UU3Ex</div-->
+  <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i></div>
+  <div><img><i></i><p><span><span><b></b></span></span></p><p></p><b><img><span></span></b><p><b></b></p><p></p><p></p><p>wg</p><i><p></p></i>2nJ<i><img></i><p></p><i><img></i>zV87J1UU3Ex</div>
 
-<!--div id="t1">lol<span>ydew<i>hey</i>de</span></div>
+<div id="t1">lol<span>ydew<i>hey</i>de</span></div>
 <div id="t2">lol<p>ydew<b>hey</b>de</p></div>
 
 
@@ -69,12 +71,12 @@
 <div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
 
 <div><p></p><img><p></p><p></p><p></p><i></i><span></span></div>
-<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
+<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div-->
 
 <div><img><p></p><p></p><p></p><p></p><i></i><span></span></div>
 <div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
 
-<div><p></p><i></i><span></span></div>
+<!--div><p></p><i></i><span></span></div>
 <div><span></span><i></i><p></p></div>
 
 <div><span></span><i></i><p></p></div>
