fixing issues #59 and #60

--- a/rewrite/test.html
+++ b/rewrite/test.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Add all divs to be compared here two by two -->
 
-  <!--div>lol<span>ydew<i>hey</i>de</span></div>
+  <div>lol<span>ydew<i>hey</i>de</span></div>
   <div>lol<p>ydew<b>hey</b>de</p></div>
 
   <div><p>hello <span>finger</span></p></div>
@@ -31,9 +31,9 @@
   <div><p>hello</p></div>
 
   <div><img><p></p></div> 
-  <div><img><p></p><p></p></div--> 
+  <div><img><p></p><p></p></div> 
 
-  <!--div><b><p></p><b><img><p><span></span></p>XW</b><span>Jl</span><b></b></b>h5QnXX</b>
+  <div><b><p></p><b><img><p><span></span></p>XW</b><span>Jl</span><b></b></b>h5QnXX</b>
   <div><span><span><b><i></i></b><img><i><span></span></i></span></span><b><p></p>z</b><span><b></b><img></span>2<img></div>
 
   <div><i><p><span>j0zF<b></b></span><i><span></span></i>LS</p>scKvb</i><b>vO8</b>G</div> 
@@ -71,12 +71,16 @@
 <div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
 
 <div><p></p><img><p></p><p></p><p></p><i></i><span></span></div>
-<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div-->
+<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
 
 <div><img><p></p><p></p><p></p><p></p><i></i><span></span></div>
 <div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
 
-<!--div><p></p><i></i><span></span></div>
+<div><img><span><i></i><span></span></span><img><p></p><p></p><p></p><p></p><i></i><span></span></div>
+<div><img><span><i></i><span></span></span><img><span></span><i></i><p></p></div>
+
+
+<div><p></p><i></i><span></span></div>
 <div><span></span><i></i><p></p></div>
 
 <div><span></span><i></i><p></p></div>
@@ -87,7 +91,7 @@
 
 
 <div><i></i><span></span><p></p></div>
-<div><span></span><i></i><p></p></div-->
+<div><span></span><i></i><p></p></div>
 
 
 
