--- a/rewrite/test_random.html
+++ b/rewrite/test_random.html
@@ -56,15 +56,7 @@ var availableElements, testElement, textContent;
        testElement.appendChild(document.createElement(ELEMENTS[Math.floor((Math.random()*ELEMENTS.length))]));
     }
 
-    // Clean up all nodes to correspond to what the browser accepts. For example, Chorme doesn't like <P> inside of <P>
-
-    for (i=0; i < mainDiv.childNodes.length; i++) {
-       mainDiv.childNodes[i].innerHTML = mainDiv.childNodes[i].innerHTML;
-    }
-
     // Add another 200 text nodes -- to test two or more consecutive sibling text nodes. 
-    // Currently seems to create the most errors and is the most difficult to trace.
-    // Therefore temporarily disabled.
 
     for (i=0; i < 200; i++) {
       textContent = '';
@@ -82,13 +74,13 @@ var availableElements, testElement, textContent;
     for (i = 0; i < divs.length; i=i+2) {
 
 
-//      try {
-        console.log("diff operations for "+preserveHTML(divs[i].cloneNode(true)).outerHTML+" -> "+preserveHTML(divs[(i+1)].cloneNode(true)).outerHTML+"\n");
+      try {
+        console.log("diff operations for "+divs[i].outerHTML+" -> "+divs[(i+1)].outerHTML+"\n");
         diffs = dd.diff(divs[i], divs[i+1]);
-console.log(diffs);
+
         console.log("\n", "applying...");
         var t1 = divs[i].cloneNode(true);
-        t1 = preserveHTML(t1);
+
         dd.apply(t1, diffs);
 
         if (t1.innerHTML===divs[i+1].innerHTML) {
@@ -111,7 +103,7 @@ console.log(diffs);
             console.log(divs[i].outerHTML);
             throw 'Outputs not matching';
         }
-try{
+//try{
       } catch (e) {
         console.log("error occured\n", e.toString());
         console.log(tl.toString());
