in some cases a text node was first removed and then added, when it should only have been modified

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 <body>
 <!-- Add all divs to be compared here two by two -->
 
+
   <div>lol<span>ydew<i>hey</i>de</span></div>
   <div>lol<p>ydew<b>hey</b>de</p></div>
 
@@ -105,6 +106,13 @@
 
 <div id="document-contents" class="editable user-contents" contenteditable="true"><p>Andd here some contents<span class="equation" data-equation="x=2*y"><span class="MathJax_Preview"></span><script type="math/tex" id="MathJax-Element-1">x=2*y</script></span>᠎ wewe <span class="equation" data-equation="x=2*y"><span class="MathJax_Preview"></span><span class="MathJax_SVG" id="MathJax-Element-2-Frame" role="textbox" aria-readonly="true" style="font-size: 120%; display: inline-block;"><svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -676 3872 891" style="width: 8.993ex; height: 2.069ex; vertical-align: -0.575ex; margin: 1px 0px;"><g stroke="black" fill="black" stroke-thickness="0" transform="matrix(1 0 0 -1 0 0)"><use xlink:href="#MJMATHI-78"></use><use x="854" y="0" xlink:href="#MJMAIN-3D"></use><use x="1915" y="0" xlink:href="#MJMAIN-32"></use><use x="2642" y="0" xlink:href="#MJMAIN-2217"></use><use x="3370" y="0" xlink:href="#MJMATHI-79"></use></g></svg></span><script type="math/tex" id="MathJax-Element-2">x=2*y</script></span>᠎ and tdedherdeefore we went skiing that year. That's quite a new thing for us though. sdasdasddsadd</p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p>desadsad</p></div>
 <div id="document-contents" class="editable user-contents" contenteditable="true"><p>Andd here some contents<span class="equation" data-equation="x=2*y"><span class="MathJax_Preview"></span><span class="MathJax_SVG" id="MathJax-Element-1-Frame" role="textbox" aria-readonly="true" style="font-size: 120%; display: inline-block;"><svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -676 3872 891" style="width: 8.993ex; height: 2.069ex; vertical-align: -0.575ex; margin: 1px 0px;"><g stroke="black" fill="black" stroke-thickness="0" transform="matrix(1 0 0 -1 0 0)"><use xlink:href="#MJMATHI-78"></use><use x="854" y="0" xlink:href="#MJMAIN-3D"></use><use x="1915" y="0" xlink:href="#MJMAIN-32"></use><use x="2642" y="0" xlink:href="#MJMAIN-2217"></use><use x="3370" y="0" xlink:href="#MJMATHI-79"></use></g></svg></span><script type="math/tex" id="MathJax-Element-1">x=2*y</script></span>᠎ wewe <span class="equation" data-equation="x=2*y"><span class="MathJax_Preview"></span><span class="MathJax_SVG" id="MathJax-Element-2-Frame" role="textbox" aria-readonly="true" style="font-size: 120%; display: inline-block;"><svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 -676 3872 891" style="width: 8.993ex; height: 2.069ex; vertical-align: -0.575ex; margin: 1px 0px;"><g stroke="black" fill="black" stroke-thickness="0" transform="matrix(1 0 0 -1 0 0)"><use xlink:href="#MJMATHI-78"></use><use x="854" y="0" xlink:href="#MJMAIN-3D"></use><use x="1915" y="0" xlink:href="#MJMAIN-32"></use><use x="2642" y="0" xlink:href="#MJMAIN-2217"></use><use x="3370" y="0" xlink:href="#MJMATHI-79"></use></g></svg></span><script type="math/tex" id="MathJax-Element-2">x=2*y</script></span>᠎ and tdedherdeefore we went skiing that year. That's quite a new thing for us though. sdasdasddsadd</p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p><br></p><p>desadsad</p></div>
+
+
+
+<div><span></span>hall<span></span></div>
+<div><span></span>hallo<span></span></div>
+
+
 
   <script>
 
