make test output show in Firefox

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       function print(text) {
         var par = document.createElement('p');
-        par.innerText = text;
+        par.textContent = text;
         document.body.lastChild.appendChild(par);
       }
 
