moved tests into better locations

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -14,7 +14,7 @@
   </style>
   <script src="TraceLogger.js">
   </script>
-  <script src="diffDOM.js">
+  <script src="../diffDOM.js">
   </script>
 </head>
 
