--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 <h2>Tests</h2>
 
 <p>There is a <a href="tests/random.html">test of random elements</a> and one of <a href="tests/basic.html">basic elements</a> that tended to throw errors in previous versions of this library.</p>
+
+<h2>Demo</h2>
+
+<p>Check out the <a href="demo/index.html">interactive demo</a>!</p>
+
 </body>
 </html>
