--- a/tests/basic.html
+++ b/tests/basic.html
@@ -6,10 +6,10 @@
   <title>diffDOM</title>
   <style>
     .success {
-      background-color: green;
+      background-color: LightGreen;
     }
     .failure {
-      background-color: red;
+      background-color: Tomato;
     }
   </style>
   <script src="TraceLogger.js">
