add link to instructions

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <p>Check out the <a href="demo/index.html">interactive demo</a>!</p>
 
+<h2>Usage/Download</h2>
+
+<p>Usage instructions and download available <a href="https://github.com/johanneswilm/diffDOM/">on github</a>.</p>
 </body>
 </html>
