add tests for form changes and fix issues with form changes, related to issue #5

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <h2>Tests</h2>
 
-<p>There is a <a href="tests/random.html">test of random elements</a> and one of <a href="tests/basic.html">basic elements</a> that tended to throw errors in previous versions of this library.</p>
+<p>There is a <a href="tests/random.html">test of random elements</a>, one of <a href="tests/basic.html">basic elements</a>, and of <a href="tests/form.html">form elements</a> that tended to throw errors in previous versions of this library.</p>
 
 <h2>Demo</h2>
 
