--- a/tests/basic.html
+++ b/tests/basic.html
@@ -533,7 +533,7 @@
 
       try {
         reportDiv();
-        print("diff operations for div #" + i + " -> div #" + (i + 1));
+        print("diff operations for div #" + i + " → div #" + (i + 1));
         diffs = dd.diff(divs[i], divs[i + 1]);
         console.log(diffs);
 
