--- a/tests/random.html
+++ b/tests/random.html
@@ -93,7 +93,7 @@
 
         try {
           reportDiv();
-          print("diff operations for " + divs[i].outerHTML + " -> " + divs[(i + 1)].outerHTML, 'div');
+          print("diff operations for " + divs[i].outerHTML + " → " + divs[(i + 1)].outerHTML, 'div');
           diffs = dd.diff(divs[i], divs[i + 1]);
 
           print("applying...");
