split value diffs from outer diffs, fixes #26

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -428,7 +428,9 @@
   </div>
   <div><span></span>hallo<span></span>
   </div>
-
+  
+  <div><select><option></option><option>A</option></select></div>
+  <div><select><option>A</option><option></option></select></div>
 
 
   <script>
