--- a/tests/form.html
+++ b/tests/form.html
@@ -37,13 +37,13 @@
     <input id="e6" type="radio" name="radioset1" checked="checked">
 
     <input id="e7" type="radio" name="radioset2">
-    <input id="e8" type="radio" name="radioset2"> 
+    <input id="e8" type="radio" name="radioset2">
 
     <input id="e9" type="checkbox" name="checkboxset1">
     <input id="e10" type="checkbox" name="checkboxset1" checked="checked">
 
     <input id="e11" type="checkbox" name="checkboxset2">
-    <input id="e12" type="checkbox" name="checkboxset2"> 
+    <input id="e12" type="checkbox" name="checkboxset2">
 
     <select>
         <option id="e13">Option 1</option>
@@ -95,7 +95,7 @@
 
     function reportDivDescription(element1, element2) {
       var elTexts = [element1.outerHTML, element2.outerHTML], elements = [element1, element2], i;
-      
+
       for (i=0;i<elements.length;i++) {
         if (elements[i].nodeName==='TEXTAREA' && elements[i].textContent !== elements[i].value) {
           elTexts[i] += ', value = "' + elements[i].value + '"';
@@ -111,11 +111,11 @@
       print("diff operations for " + elTexts[0] + " → " + elTexts[1]);
     }
 
-    var dd = new diffDOM(true, 700),
+    var dd = new diffDOM(true, 700, true),
       tl = new TraceLogger(dd), elements, first, second, third, fourth, theDiff;
 
     // Textarea
-    
+
     setSection('Textarea');
 
     first = document.getElementById('e1');
@@ -130,7 +130,7 @@
 
     theDiff = dd.diff(first, second);
 
-    if (theDiff.length === 2) {
+    if (theDiff.length === 1) {
       success(theDiff);
     } else {
       testFailure();
@@ -211,7 +211,7 @@
 
     theDiff = dd.diff(first, second);
 
-    if (theDiff.length === 2) {
+    if (theDiff.length === 1) {
       success(theDiff);
     } else {
       testFailure();
@@ -284,7 +284,7 @@
 
     theDiff = dd.diff(first, second);
 
-    if (theDiff.length === 2) {
+    if (theDiff.length === 1) {
       success(theDiff);
     } else {
       testFailure();
@@ -368,7 +368,7 @@
 
     theDiff = dd.diff(first, second);
 
-    if (theDiff.length === 2) {
+    if (theDiff.length === 1) {
       success(theDiff);
     } else {
       testFailure();
@@ -425,7 +425,7 @@
 
     theDiff = dd.diff(second, fourth);
 
-    if (theDiff.length === 3) {
+    if (theDiff.length === 2) {
       success(theDiff);
     } else {
       testFailure();
