--- a/tests/random.html
+++ b/tests/random.html
@@ -24,7 +24,7 @@
       CHARACTERS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789',
       ATTRIBUTES = ['data-test', 'class', 'data-fisher', 'data-id'];
 
-      var dd = new diffDOM(),
+      var dd = new diffDOM({debug:true,diffcap:500}),
         tl = new TraceLogger(dd),
         divs, diffs, t1, i, j, availableElements, testElement, textContent, mainDiv = document.createElement('div');
 
@@ -98,7 +98,7 @@
 
           print("applying...");
           var t1 = divs[i].cloneNode(true);
-
+console.log(diffs);
           dd.apply(t1, diffs);
 
           if (t1.isEqualNode(divs[i + 1])) {
